k8s/olss-demo-app/olss-app.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olss-demo-app
  namespace: olss-demo-app
  labels:
    app: olss-demo-app
spec:
  selector:
    matchLabels:
      app: olss-demo-app
  replicas: 1
  template:
    metadata:
      labels:
        app: olss-demo-app
    spec:
      containers:
      - name: olss-demo-app
        image: andreaceccanti/olss-demo-app:latest
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: "1"
            memory: 256Mi
        startupProbe:
          periodSeconds: 5
          failureThreshold: 10
          httpGet:
            path: /actuator/health/readiness
            port: 8080
        readinessProbe:
          periodSeconds: 5
          httpGet:
            path: /actuator/health/readiness
            port: 8080
        livenessProbe:
          periodSeconds: 5
          httpGet:
            path: /actuator/health/liveness
            port: 8080
        ports:
          - name: web
            containerPort: 8080
