k8s/olss-demo-app/olss-app.service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  olss-demo-app
  namespace: olss-demo-app
  labels:
    app: olss-demo-app
spec:
  selector:
    app:  olss-demo-app
  type:  ClusterIP
  ports:
  - name:  web
    port:  8080
    targetPort:  web
